MIKADO runs