@@ -129,13 +129,15 @@ public abstract class Generator {
 									failedIds.add(id);
 								} else {
 
-									setProgressMessage("Building CDI Summary data");
+									setProgressMessage("Building CDI Summary data (Model " + modelsProcessed + " of " + models.size() + ')');
 									CDISummary cdiSummary = new CDISummary(importer.getLocalCdiId(), cdiDb, importer);
 									
-									setProgressMessage("Adding CDI Summary data to database");
+									setProgressMessage("Adding CDI Summary data to database (Model " + modelsProcessed + " of " + models.size() + ')');
 									cdiDb.clearCdiSummary();
 									cdiDb.storeCdiSummary(cdiSummary);
 									
+									setProgressMessage("Running MIKADO (Model " + modelsProcessed + " of " + models.size() + ')');
+									runMikado();
 									succeededIds.add(id);
 								}
 							}
@@ -253,6 +255,28 @@ public abstract class Generator {
 	}
 	
 	/**
+	 * Execute MIKADO
+	 * @throws ImporterException If MIKADO fails - this can only happen if MIKADO is badly configured
+	 */
+	private void runMikado() throws ExternalProcessFailedException {
+		List<String> command = buildMikadoCommand();
+		ProcessBuilder builder = new ProcessBuilder(command);
+		
+		try {
+			Process process = builder.start();
+			int processResult = process.waitFor();
+
+			if (processResult != 0) {
+				getLogger().severe("MIKADO exited with non-zero result. Aborting CDI Generator\n");
+				getLogger().severe("Look at the MIKADO log file");
+				throw new ExternalProcessFailedException("MIKADO");
+			}
+		} catch (IOException|InterruptedException e) {
+			throw new ExternalProcessFailedException("MIKADO", e);
+		}
+	}
+	
+	/**
 	 * Create the NEMO command for the given data set
 	 * @param dataSetId The ID of the data set
 	 * @return The NEMO command line
@@ -286,5 +310,22 @@ public abstract class Generator {
 	 */
 	private File getNemoModelFile(String dataSetId) {
 		return new File(config.getTempDir(), dataSetId + "_nemoModel.xml");
+	}
+	
+	private List<String> buildMikadoCommand() {
+		List<String> command = new ArrayList<String>();
+		
+		command.add("java");
+		command.add("-Djava.endorsed.dirs=\"" + config.getMikadoLibraryDir() + '"');
+		command.add("-jar");
+		command.add(config.getMikadoJarFile());
+		command.add("mikado-home=" + config.getMikadoHomeDir());
+		command.add("batch-mode=CDI19139");
+		command.add("batch-type=XmlFiles");
+		command.add("conf-file=" + config.getMikadoTemplateFile());
+		command.add("output-dir=" + config.getMikadoOutputDir());
+		command.add("continue-when-error=false");
+		
+		return command;
 	}
 }
